Add of the launch4j to create an executable of the project